--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "\u0016https://leningotru@bitbucket.org/leningotru/serverwebsockets.git"
+    "url": "https://github.com/leningotru/serverWebSocket"
   },
   "keywords": [
     "server"
